deploy: 2553f03f859110abe2db23ada64b4a2ac1cad90e

--- a/business-and-employers/index.html
+++ b/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Businesses and employers</h1>
           
-            <p class="small-text">Last updated&nbsp;October 5, 2020 at 9:39 AM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 9:42 AM</p>
           
         </div>
       </div>
@@ -210,7 +210,7 @@
 
 
 
-<h3><strong>Financial and technical assistance for small businesses&nbsp;</strong></h3>
+<h3>Financial and technical assistance for small businesses </h3>
 
 
 
@@ -218,7 +218,7 @@
 
 
 
-<h3><strong>Labor and workforce support for businesses</strong></h3>
+<h3>Labor and workforce support for businesses</h3>
 
 
 
@@ -230,7 +230,7 @@
 
 
 
-<h3><strong><strong>Small Business Disaster Relief Loan Guarantee program</strong></strong></h3>
+<h3>Small Business Disaster Relief Loan Guarantee program</h3>
 
 
 
@@ -238,7 +238,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What is a loan guarantee?</strong></h4>
+<h4>What is a loan guarantee?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -261,7 +261,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Who is eligible to apply for a loan guarantee?</strong></h4>
+<h4>Who is eligible to apply for a loan guarantee?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -284,7 +284,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What do you consider a small business?</strong></h4>
+<h4>What do you consider a small business?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -327,7 +327,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What are excluded businesses?&nbsp;</strong></h4>
+<h4>What are excluded businesses? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -350,7 +350,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Can I apply for a loan guarantee if I am ineligible for federal disaster fund financing, such as a Small Business Administration (SBA) loan?&nbsp;</strong></h4>
+<h4>Can I apply for a loan guarantee if I am ineligible for federal disaster fund financing, such as a Small Business Administration (SBA) loan? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -373,7 +373,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How much can I borrow?</strong></h4>
+<h4>How much can I borrow?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -396,7 +396,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What are the loan terms?</strong></h4>
+<h4>What are the loan terms?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -419,7 +419,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How can I apply for a <strong>loan guarantee</strong>?&nbsp;</strong></h4>
+<h4>How can I apply for a loan guarantee? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -447,7 +447,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What is the timing for the funding of loans?</strong></h4>
+<h4>What is the timing for the funding of loans?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -470,7 +470,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How will this program assist low-wealth and minority communities?</strong></h4>
+<h4>How will this program assist low-wealth and minority communities?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -493,7 +493,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Are faith-based businesses eligible for this loan guarantee program?&nbsp;</strong></h4>
+<h4>Are faith-based businesses eligible for this loan guarantee program? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -520,7 +520,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How do I create a safe workplace?</strong></h4>
+<h4>How do I create a safe workplace?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -548,7 +548,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Should a business owner notify customers if an employee has been exposed to COVID-19?</strong></h4>
+<h4>Should a business owner notify customers if an employee has been exposed to COVID-19?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -591,7 +591,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What precautions should healthcare workers and organizations take?</strong></h4>
+<h4>What precautions should healthcare workers and organizations take?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -614,7 +614,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How can I avoid laying off employees if my business is impacted by COVID-19?</strong></h4>
+<h4>How can I avoid laying off employees if my business is impacted by COVID-19?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -633,7 +633,7 @@
 
 
 
-<h3><strong>Small Business Administration (SBA) stimulus programs</strong></h3>
+<h3>Small Business Administration (SBA) stimulus programs</h3>
 
 
 
@@ -641,7 +641,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What SBA programs are available to small businesses right now?</strong></h4>
+<h4>What SBA programs are available to small businesses right now?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -684,7 +684,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How does a business know if it is eligible for a Small Business Administration (SBA) loan or loan guarantee program?</strong></h4>
+<h4>How does a business know if it is eligible for a Small Business Administration (SBA) loan or loan guarantee program?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -712,7 +712,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How do I reach the Small Business Administration (SBA) for any questions or assistance?</strong></h4>
+<h4>How do I reach the Small Business Administration (SBA) for any questions or assistance?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -735,7 +735,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How does a small business know which Small Business Administration (SBA) loan or loan guarantee program is the right one? Can a small business apply to more than one?</strong></h4>
+<h4>How does a small business know which Small Business Administration (SBA) loan or loan guarantee program is the right one? Can a small business apply to more than one?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -758,7 +758,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How do I get the Small Business Administration (SBA) to cover my loan payments on my existing 7(a), 504, or microloan if I cannot pay due to COVID-19?</strong></h4>
+<h4>How do I get the Small Business Administration (SBA) to cover my loan payments on my existing 7(a), 504, or microloan if I cannot pay due to COVID-19?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -781,7 +781,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>If I need help to figure out which program is best for me or to submit an application, where can I find support?</strong></h4>
+<h4>If I need help to figure out which program is best for me or to submit an application, where can I find support?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
