--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -3,7 +3,7 @@
 
 
 
-<p>California has released guidance for people traveling into and out of California.</p>
+<p>California has released guidance for people traveling into and out of the state.</p>
 
 
 
