deploy: 187ebc22484c5fe91f4e677c8c7ed5fb314d8810

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 1:01 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 3:25 PM</p>
           
         </div>
       </div>
@@ -178,7 +178,7 @@
 
 
 
-<h2 class="has-text-align-center" id="county-status">Understand your county&#8217;s status</h2>
+<h2 class="has-text-align-center">Understand your county&#8217;s status</h2>
 
 
 
@@ -212,7 +212,7 @@
 
 
 
-<h3 class="has-text-align-center">Current tier assignments as of November 10, 2020</h3>
+<h3 class="has-text-align-center" id="county-status">Current tier assignments as of November 10, 2020</h3>
 
 
 
