deploy: 086815a25f9fb4c055daa59132fa0ee405d41830

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 
 
-<p>California has released guidance for people traveling into and out of California.</p>
+<p>California has released guidance for people traveling into and out of the state.</p>
 
 
 
