--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 4:27 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 4:33 PM</p>
           
         </div>
       </div>
@@ -176,6 +176,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--42976 -->November 13, 2020</small></p>
           <div class="card-text" lang="en-US">In light of rising cases, West Coast states issue travel advisories recommending 14-day quarantines for inter-state and international travel; ask residents to stay local SACRAMENTO – As COVID-19 cases continue to increas...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-299.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b6efc467e86fe3de814e9710a5c27391 -->November 12, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
