deploy: 2f6468bda325c6f4a1fd280e9cce6a596583a745

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;October 26, 2020 at 5:33 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 4:33 PM</p>
           
         </div>
       </div>
@@ -238,7 +238,7 @@
 
 
 
-<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD </li><li>Weakened immune system from organ transplant</li><li>Obesity </li><li>Serious heart conditions</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
+<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD&nbsp;</li><li>Weakened immune system from organ transplant</li><li>Obesity&nbsp;</li><li>Serious heart conditions</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
 
 
 
@@ -482,6 +482,62 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Can people who recover from COVID-19 be re-infected?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>We don’t yet know. The duration of immunity to coronavirus infection is not yet understood. Patients infected with similar viruses are unlikely to be re-infected in the months after they recover. But we don’t yet know if&nbsp; similar immune protection happens in patients with COVID-19.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Who needs to quarantine?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>You should <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">quarantine</a> if you have had close contact with someone who has COVID-19. If you tested positive for COVID-19 in the 3 months prior to the close contact but do not currently have symptoms, you do not need to quarantine or be tested again. If you develop symptoms, you may need to quarantine and be tested again.</p>
+<p>You have had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> if:</p>
+<ul><li>You were within 6 feet of someone who has COVID-19 for 15 minutes or more over a 24-hour period</li><li>You provided care at home to someone who is sick with COVID-19</li><li>You had direct physical contact with the person (hugging or kissing them)</li><li>You shared eating or drinking utensils</li><li>They sneezed, coughed, or somehow got respiratory droplets on you</li></ul>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
 
 
 
