deploy: ae3fcf657377d510fd0e0a57bb869088e7260108

--- a/ar/index.html
+++ b/ar/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/ar/safer-economy/">خريطة المقاطعات</a>
+						<a class="hero-stats-footer-link mt-2" href="/ar/safer-economy/#county-status">خريطة المقاطعات</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">ملخص الحالة</a>
 					</div>
 				</div>
