--- a/es/index.html
+++ b/es/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/es/safer-economy/">Mapa de los condados</a>
+						<a class="hero-stats-footer-link mt-2" href="/es/safer-economy/#county-status">Mapa de los condados</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">Resumen del estado</a>
 					</div>
 				</div>
