--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/safer-economy/">County Map</a>
+						<a class="hero-stats-footer-link mt-2" href="/safer-economy/#county-status">County Map</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">State dashboard</a>
 					</div>
 				</div>
