--- a/ko/index.html
+++ b/ko/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/ko/safer-economy/">카운티지도</a>
+						<a class="hero-stats-footer-link mt-2" href="/ko/safer-economy/#county-status">카운티지도</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">상태 요약</a>
 					</div>
 				</div>
