--- a/tl/index.html
+++ b/tl/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/tl/safer-economy/">Mga Mapa ng Mga Bansa</a>
+						<a class="hero-stats-footer-link mt-2" href="/tl/safer-economy/#county-status">Mga Mapa ng Mga Bansa</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">Buod ng katayuan</a>
 					</div>
 				</div>
