--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/zh-hans/safer-economy/">县地图</a>
+						<a class="hero-stats-footer-link mt-2" href="/zh-hans/safer-economy/#county-status">县地图</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">状态摘要</a>
 					</div>
 				</div>
