--- a/zh-hant/index.html
+++ b/zh-hant/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/zh-hant/safer-economy/">縣地圖</a>
+						<a class="hero-stats-footer-link mt-2" href="/zh-hant/safer-economy/#county-status">縣地圖</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">狀態摘要</a>
 					</div>
 				</div>
