--- a/vi/index.html
+++ b/vi/index.html
@@ -203,7 +203,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="/vi/safer-economy/">Bản đồ quận</a>
+						<a class="hero-stats-footer-link mt-2" href="/vi/safer-economy/#county-status">Bản đồ quận</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">Tóm tắt trạng thái</a>
 					</div>
 				</div>
