--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Get tested</h1>
           
-            <p class="small-text">Last updated&nbsp;October 30, 2020 at 12:58 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 6:04 PM</p>
           
         </div>
       </div>
@@ -396,6 +396,39 @@
 <p>Turnaround time for coronavirus test results is usually less than two days. Approximately two-thirds are returned within a day and more than 85% are available within two days.</p>
 <p>This turnaround time includes shipping time. So for labs that process home testing kits, turnaround time may depend on when an individual mails back their kit.</p>
 <p>If you haven’t received your test results and it’s been several days, contact your healthcare provider, testing service, or local health department.<br><br>Read more at <a href="https://testing.covid19.ca.gov/">California’s COVID-19 Testing Task Force</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Who should get tested for coronavirus?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>You should get tested if you:</p>
+<ul><li>Had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> with anyone who has tested positive for COVID-19</li><li>Have COVID-19 symptoms</li><li>Get a call from a contact tracer</li><li>Are at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Updated-COVID-19-Testing-Guidance.aspx">high risk</a></li></ul>
+<p>If you think you may have been exposed, call your doctor.</p>
 
       </div>
     </div>
