--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;14 de noviembre de 2020 a las 10:48 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;14 de noviembre de 2020 a las 11:30 a. m.</p>
           
         </div>
       </div>
@@ -176,6 +176,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43106 -->November 13, 2020</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today announced the following appointments: Linda Lye, 47, of Kensington, has been appointed Deputy Secretary for Law Enforcement and General Counsel at the California Environmental Pro...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-300.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--33b4f48d01653483dc3de8b2bb1732b2 -->November 13, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
