--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 4:33 PM</p>
+            <p class="small-text">Last updated&nbsp;November 15, 2020 at 5:21 AM</p>
           
         </div>
       </div>
@@ -551,6 +551,14 @@
 
 
 
+
+
+
+<p>Persons arriving in California from other states or countries, including returning California residents, should practice <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/self-quarantine-instructions.pdf">self-quarantine</a> for 14 days after arrival. These persons should limit their interactions to their immediate household. This recommendation does not apply to individuals who cross state or country borders for essential travel.</p>
+
+
+
+<p>For complete details and requirements, read CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a>.</p>
 
 
 
