deploy: 8b6e009f1fb6e18ded03836ea1ad561b18766c3c

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 15, 2020 at 5:21 AM</p>
+            <p class="small-text">Last updated&nbsp;November 16, 2020 at 6:38 AM</p>
           
         </div>
       </div>
@@ -507,7 +507,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>We don’t yet know. The duration of immunity to coronavirus infection is not yet understood. Patients infected with similar viruses are unlikely to be re-infected in the months after they recover. But we don’t yet know if&nbsp; similar immune protection happens in patients with COVID-19.</p>
+<p>We don’t yet know. The duration of immunity to coronavirus infection is not yet understood. Patients infected with similar viruses are unlikely to be re-infected in the months after they recover. But we don’t yet know if  similar immune protection happens in patients with COVID-19.</p>
 
       </div>
     </div>
@@ -533,6 +533,8 @@
 <p>You should <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">quarantine</a> if you have had close contact with someone who has COVID-19. If you tested positive for COVID-19 in the 3 months prior to the close contact but do not currently have symptoms, you do not need to quarantine or be tested again. If you develop symptoms, you may need to quarantine and be tested again.</p>
 <p>You have had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> if:</p>
 <ul><li>You were within 6 feet of someone who has COVID-19 for 15 minutes or more over a 24-hour period</li><li>You provided care at home to someone who is sick with COVID-19</li><li>You had direct physical contact with the person (hugging or kissing them)</li><li>You shared eating or drinking utensils</li><li>They sneezed, coughed, or somehow got respiratory droplets on you</li></ul>
+<p>Persons arriving in California from other states or countries, including returning California residents, should practice <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/self-quarantine-instructions.pdf">self-quarantine</a> for 14 days after arrival. These persons should limit their interactions to their immediate household. This recommendation does not apply to individuals who cross state or country borders for essential travel.</p>
+<p>For complete details and requirements, read CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a>.</p>
 
       </div>
     </div>
@@ -554,11 +556,11 @@
 
 
 
-<p>Persons arriving in California from other states or countries, including returning California residents, should practice <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/self-quarantine-instructions.pdf">self-quarantine</a> for 14 days after arrival. These persons should limit their interactions to their immediate household. This recommendation does not apply to individuals who cross state or country borders for essential travel.</p>
 
 
 
-<p>For complete details and requirements, read CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a>.</p>
+
+
 
 
 
