--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 15일 오후 1:31</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오전 6:42</p>
           
         </div>
       </div>
