--- a/ar/education/index.html
+++ b/ar/education/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التعليم</h1>
           
-            <p class="small-text">Last updated&nbsp;12:07 م الساعة 10 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;9:32 ص الساعة 13 نوفمبر 2020</p>
           
         </div>
       </div>
