--- a/es/education/index.html
+++ b/es/education/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Educación</h1>
           
-            <p class="small-text">Last updated&nbsp;10 de noviembre de 2020 a las 12:07 p. m.</p>
+            <p class="small-text">Last updated&nbsp;13 de noviembre de 2020 a las 9:32 a. m.</p>
           
         </div>
       </div>
