--- a/ko/education/index.html
+++ b/ko/education/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>교육</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 10일 오후 12:07</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 13일 오전 9:32</p>
           
         </div>
       </div>
