--- a/tl/education/index.html
+++ b/tl/education/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Edukasyon</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 10, 2020 sa 12:07 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 13, 2020 sa 9:32 AM</p>
           
         </div>
       </div>
