--- a/zh-hant/education/index.html
+++ b/zh-hant/education/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月10日, 下午12:07</p>
+            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午9:32</p>
           
         </div>
       </div>
