--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>حين يتعلق الأمر بلقاحات كوفيد-19، ستظل كاليفورنيا مستمرة في الاعتماد على العلم والبيانات</strong></h2>
+<h2 class="h3 text-primary">إرشادات حول السفر خارج الولاية</h2>
 
 
 
-<p>ستعمل مجموعة العمل المعنية باستعراض السلامة العلمية للتطعيم ضد فيروس كوفيد-19 على مراجعة اللقاحات المعتمدة من إدارة الغذاء والدواء (FDA). وستعمل المجموعة على ضمان سلامة اللقاحات وتوزيعها بشكل عادل.</p>
+<p>وقد أصدرت ولاية كاليفورنيا إرشادات وتوجيهات للأشخاص المسافرين إلى الولاية أو الخروج منها.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">تعرَّف على المزيد</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">تعرَّف على المزيد</a></p>
