--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>En lo que respecta a las vacunas contra la COVID-19, California seguirá actuando conforma a la ciencia y los datos</strong></h2>
+<h2 class="h3 text-primary">Orientación para viajes fuera del estado</h2>
 
 
 
-<p>El grupo de trabajo de revisión de seguridad científica de la vacunación contra la COVID-19 revisará las vacunas aprobadas por la Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA). Ellos trabajaran para asegurarse de que las vacunas sean seguras y se distribuyan de manera equitativa.</p>
+<p>California publicó una guía para las personas que viajan al estado y fuera de él.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">Más información</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Más información</a></p>
