--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>COVID-19 백신과 관련하여 캘리포니아는 지속적으로 과학과 데이터에 근거하여 결정을 내릴 것입니다</strong></h2>
+<h2 class="h3 text-primary">타주 여행에 대한 지침</h2>
 
 
 
-<p>COVID-19 백신 접종에 대한 과학적 안전성 검토 실무단(COVID-19 Vaccination Scientific Safety Review Workgroup)에서 식품의약국(Food and Drug Administration, FDA)이 승인한 백신에 대해 검토할 것입니다. 이를 통해 백신의 안전성과 공정한 배포를 보장하기 위해 노력하게 됩니다.</p>
+<p>캘리포니아는 타주에서 오거나 타주로 가는 여행자에 대한 지침을 발표하였습니다.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">더 자세한 사항을 확인하십시오</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">더 자세한 사항을 확인하십시오</a></p>
