--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>Pagdating sa mga bakuna para sa COVID-19, siyensya at datos pa rin ang gagawing batayan ng California</strong></h2>
+<h2 class="h3 text-primary">Gabay sa paglalakbay sa labas ng estado</h2>
 
 
 
-<p>Susuriin ng Pangkat sa Siyentipiko at Pangkaligtasang Pagsusuri ng Bakuna sa COVID-19 (COVID-19 Vaccination Scientific Safety Review Workgroup) ang mga bakunang aprubado ng FDA. Pagsisikapan nilang tiyaking ligtas at patas na maipapamahagi ang mga bakuna.</p>
+<p>Naglabas ng gabay ang California para sa mga taong naglalakbay papasok at palabas ng estado.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">Matuto pa</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Matuto pa</a></p>
