--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>Đối với vắc-xin phòng bệnh COVID-19, California sẽ tiếp tục nỗ lực dựa trên khoa học và dữ liệu</strong></h2>
+<h2 class="h3 text-primary">Hướng dẫn khi đi du lịch ngoài tiểu bang</h2>
 
 
 
-<p>Nhóm Công Tác Đánh Giá An Toàn Khoa Học Công Tác Tiêm Phòng Vắc-xin COVID-19 sẽ đánh giá các vắc-xin được Cơ Quan Quản Lý Thực Phẩm và Dược Phẩm (Food and Drug Administration, FDA) phê duyệt. Họ sẽ nỗ lực để đảm bảo các vắc-xin an toàn và được phân phối công bằng.</p>
+<p>California đã ban hành hướng dẫn dành cho những người đi du lịch vào và ra khỏi tiểu bang.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">Tìm hiểu thêm</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Tìm hiểu thêm</a></p>
