--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>就COVID-19疫苗而言，加州将继续以科学及数据为主导</strong></h2>
+<h2 class="h3 text-primary">州外旅游指引</h2>
 
 
 
-<p>COVID-19疫苗接种科学安全审查工作组将审查经美国食品药品监督管理局 (Food and Drug Administration, FDA) 核准的疫苗。其将尽力确保疫苗的安全性以及疫苗分配的公平性。</p>
+<p>加州已为进出本州的旅客发布指引。</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">了解更多信息</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">了解更多信息</a></p>
