--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary"><strong>就COVID-19疫苗而言，加州將繼續以科學及數據為主導</strong></h2>
+<h2 class="h3 text-primary">州外旅遊指引</h2>
 
 
 
-<p>COVID-19疫苗接種科學安全審查工作組將審查經美國食品藥品監督管理局 (Food and Drug Administration, FDA) 核准的疫苗。其將盡力確保疫苗的安全性以及疫苗分配的公平性。</p>
+<p>加州已為進出本州的旅客發佈指引。</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">了解更多資訊</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">了解更多資訊</a></p>
