deploy: f5451887c8e0313de496c345a786ad7b8119a2ec

--- a/es/resources-for-emotional-support-and-well-being/index.html
+++ b/es/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Recursos para el apoyo emocional y el bienestar</h1>
           
-            <p class="small-text">Last updated&nbsp;4 de noviembre de 2020 a las 1:10 p. m.</p>
+            <p class="small-text">Last updated&nbsp;13 de noviembre de 2020 a las 11:36 a. m.</p>
           
         </div>
       </div>
@@ -268,7 +268,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.nvfc.org/fireems-helpline/">Línea de ayuda<strong> contra </strong>incendios/EMS</a>: llame al <a href="tel:888-731-FIRE">888-731-FIRE</a> para obtener ayuda las 24 horas del día, los 7 días de la semana para una variedad de problemas de salud del comportamiento.</li><li><a href="https://www.copline.org/">LÍNEA DE LA POLICÍA</a>: llame al <a href="tel:800-267-5463">800-267-5463</a> para encontrar apoyo las 24 horas del día, los 7 días de la semana de agentes de la ley.</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">Línea de ayuda<strong> contra </strong>incendios/EMS</a>: llame al <a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a> para encontrar apoyo las 24 horas del día, los 7 días de la semana para una variedad de problemas de salud del comportamiento para bomberos.</li><li><a href="https://www.copline.org/">LÍNEA PARA POLICÍAS</a>: llame al <a href="tel:800-267-5463">800-267-5463</a> para encontrar apoyo las 24 horas del día, los 7 días de la semana para agentes de la ley.</li></ul>
 
       </div>
     </div>
@@ -373,7 +373,7 @@
 
 
 
-<p><!-- /wp:group --><br /><!-- wp:heading --></p>
+<p><!-- /wp:group --><br><!-- wp:heading --></p>
 <h2><!-- /wp:heading -->Encuentre servicios de salud conductual y mental<!-- wp:paragraph --></h2>
 <p>Si tiene <strong>Medi-Cal</strong> y necesita servicios de salud mental, llame al número que figura en su tarjeta de membresía del plan de salud o llame a la <a href="https://www.dhcs.ca.gov/individuals/Pages/MHPContactList.aspx">línea local de salud mental de su condado</a>. Para obtener ayuda para encontrar qué servicios están cubiertos, llame a la <a href="https://www.dhcs.ca.gov/services/MH/Pages/mh-ombudsman.aspx">Oficina del Defensor del Pueblo de Atención Médica Administrada y Salud Mental de Medi-Cal</a> al<a href="tel:1-888-452-8609"> 888-452-8609</a>, de lunes a viernes, de 8:00 a. m. a 5:00 p. m.<!-- /wp:paragraph --><!-- wp:paragraph --></p>
 <p>Si tiene un plan de salud a través de su <strong>empleador o compra su propio</strong> seguro de salud y necesita servicios de salud mental, llame al número que figura en su tarjeta de membresía del plan de salud.</p>
@@ -409,7 +409,7 @@
 <h2>Ayuda a otros</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Protección de los niños contra el abuso y la negligencia</h4>
+<h3>Protección de los niños contra el abuso y la negligencia</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Los miembros de la comunidad desempeñan un importante papel en la protección de los niños contra el abuso y la negligencia. Si le preocupa la salud o la seguridad de un niño, llame a la <a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse">línea directa local de Servicios de Protección Infantil </a>(Child Protective Services, CPS) del condado donde vive el niño o busque un<a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf"> proveedor local de servicios para víctimas juveniles de abuso infantil</a>.</p>
@@ -421,7 +421,7 @@
 <p>También puede ayudar a niños y jóvenes que han sido maltratados o descuidados ofreciéndose a servir como cuidador de crianza. Comuníquese con el departamento local de <a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">Servicios Sociales o Servicios Humanos de su condado</a> o llame a la línea gratuita <a href="tel: 1-800-543-7487">800-KIDS-4-US</a>.</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Apoyo familiar</h4>
+<h3>Apoyo familiar</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Si le preocupa una familia que necesita alimentos o asistencia, o usted mismo necesita recursos, llame al <a href="tel:211">211</a>, comuníquese con su <a href="https://frcnca.org/get-connected/">centro local de recursos familiares</a> sin fines de lucro o solicite beneficios públicos, que pueden incluir atención médica, asistencia monetaria, y alimentos y asistencia nutricional, a través del departamento local de <a href="http://www.benefitscal.org/">Servicios Sociales, o de Salud y Servicios Humanos</a> de su condado.</p>
@@ -434,7 +434,7 @@
 <p><span style="font-weight: 400;">Los cuidadores pueden encontrar </span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">recursos en el sitio web del Departamento de Envejecimiento</span></a><span style="font-weight: 400;">, incluidas las pautas para proteger la salud y la seguridad de usted y su ser querido contra la COVID-19.</span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>Servicios de protección para adultos del condado</strong></h4>
+<h3><strong>Servicios de protección para adultos del condado</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Servicios de protección para adultos: llame al <a href="tel:833-401-0832">833-401-0832</a>, las 24 horas del día, los 7 días de la semana, para inquietudes sobre abuso, negligencia o explotación de adultos.</p>
