--- a/tl/resources-for-emotional-support-and-well-being/index.html
+++ b/tl/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga mapagkukunan para sa emosyonal na suporta at kapakanan</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 4, 2020 sa 1:10 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 13, 2020 sa 11:36 AM</p>
           
         </div>
       </div>
@@ -268,7 +268,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.nvfc.org/fireems-helpline/">Linya ng tulong para sa<strong> </strong>sunog/EMS</a>: Tumawag sa <a href="tel:888-731-FIRE">888-731-FIRE</a> para makatanggap ng 24/7 na tulong para sa iba't ibang isyu sa kalusugang nauugnay sa pag-uugali.</li><li><a href="https://www.copline.org/">COPLINE</a>: Tumawag sa <a href="tel:800-267-5463">800-267-5463</a> para makahanap ng suporta 24/7 para sa mga opisyal na tagapagpatupad ng batas.</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">Linya ng tulong para sa<strong> </strong>sunog/EMS</a>: Tumawag sa <a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a> para makahanap ng 24/7 na suporta para sa iba't ibang isyu sa kalusugang nauugnay sa pag-uugali ng mga bumbero.</li><li><a href="https://www.copline.org/">COPLINE</a>: Tumawag sa <a href="tel:800-267-5463">800-267-5463</a> para makahanap ng suporta 24/7 para sa mga opisyal na tagapagpatupad ng batas.</li></ul>
 
       </div>
     </div>
@@ -373,7 +373,7 @@
 
 
 
-<p><!-- /wp:group --><br /><!-- wp:heading --></p>
+<p><!-- /wp:group --><br><!-- wp:heading --></p>
 <h2><!-- /wp:heading -->Maghanap ng mga serbisyo sa kalusugang nauugnay sa pag-uugali at pag-iisip<!-- wp:paragraph --></h2>
 <p>Kung mayroon kang <strong>Medi-Cal</strong> at nangangailangan ka ng mga serbisyo sa kalusugan ng pag-iisip, tumawag sa numero sa iyong card ng membership sa planong pangkalusugan, o tumawag sa <a href="https://www.dhcs.ca.gov/individuals/Pages/MHPContactList.aspx">linya para sa kalusugan ng pag-iisip ng iyong lokal na county</a>. Para sa tulong sa paghahanap ng mga sinasaklaw na serbisyo, tumawag sa <a href="https://www.dhcs.ca.gov/services/MH/Pages/mh-ombudsman.aspx">Pinapamahalaang Pangangalaga ng Medi-Cal at Kalusugan ng Pag-iisip ng Opisina ng Ombudsman</a> sa<a href="tel:1-888-452-8609"> 888-452-8609</a> Lunes hanggang Biyernes mula 8am – 5pm.<!-- /wp:paragraph --><!-- wp:paragraph --></p>
 <p>Kung mayroon kang planong pangkalusugan sa pamamagitan ng iyong <strong>employer o kung bumili ka ng sarili mong</strong> insurance sa kalusugan, at kailangan mo ng mga serbisyo sa kalusugan ng pag-iisip, tumawag sa numero sa iyong card ng membership sa planong pangkalusugan.</p>
@@ -409,7 +409,7 @@
 <h2>Pagtulong sa Iba</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Pagprotekta sa mga bata mula sa abuso at kapabayaan</h4>
+<h3>Pagprotekta sa mga bata mula sa abuso at kapabayaan</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Mahalaga ang tungkulin ng mga miyembro ng komunidad sa pagprotekta ng mga bata mula sa pang-aabuso at kapabayaan. Kung nababahala ka sa kalusugan o kaligtasan ng isang bata, tumawag sa<a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse"> lokal na hotline ng Mga Serbisyo sa Pagprotekta ng Mga Bata (Child Protective Services, CPS)</a> para sa bansa kung saan nakatira ang bata o maghanap ng <a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf">lokal na tagapagbigay ng serbisyo para sa mga batang biktima ng pang-aabuso</a>.</p>
@@ -421,7 +421,7 @@
 <p>Puwede ka ring makatulong sa mga bata at kabataan na naabuso o pinabayaan sa pamamagitan ng pagboboluntaryo bilang foster na tagapag-alaga.  Mangyaring makipag-ugnayan sa <a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">departamento ng Serbisyong Panlipunan o Serbisyong Pantao</a> ng iyong lokal na county, o tumawag sa walang bayad na linya sa <a href="tel: 1-800-543-7487">800-KIDS-4-US</a>.</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Suporta sa pamilya</h4>
+<h3>Suporta sa pamilya</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Kung sa palagay mo ay nangangailangan ang isang pamilya ng pagkain o tulong, o kung ikaw mismo ang nangangailangan ng mga rekurso, tumawag sa <a href="tel:211">211</a>, makipag-ugnayan sa iyong lokal na non-profit na <a href="https://frcnca.org/get-connected/">Sentro sa Rekurso ng Mga Pamilya</a>, o mag-apply para sa mga pampublikong benepisyo, na posibleng kabilangan ng pangangalangang pangkalusugan, pinansyal na tulong, at tulong sa pagkain at nutrisyon, sa pamamagitan ng <a href="http://www.benefitscal.org/">departamento ng Mga Serbisyong Panlipunan o Serbisyong Pantao at Pangkalusugan</a> ng iyong county.</p>
@@ -434,7 +434,7 @@
 <p><span style="font-weight: 400;">Makakakita ang mga tagapag-alaga ng </span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">mga rekurso sa website ng Departamento ng Pagtanda</span></a><span style="font-weight: 400;">, pati ng mga alituntunin para maprotektahan ang kalusugan at kaligtasan mo at ng iyong mga mahal sa buhay mula sa COVID-19. </span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>Mga Serbisyo ng County sa Pagprotekta ng Mga Nasa Hustong Gulang</strong></h4>
+<h3><strong>Mga Serbisyo ng County sa Pagprotekta ng Mga Nasa Hustong Gulang</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Mga Serbisyo sa Pagprotekta ng Mga Nasa Hustong Gulang: Tumawag sa <a href="tel:833-401-0832">833-401-0832</a> 24/7 para sa mga alalahanin tungkol sa pang-aabuso, kapabayaan, o pananamantala sa mga nasa hustong gulang.</p>
