--- a/vi/resources-for-emotional-support-and-well-being/index.html
+++ b/vi/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Nguồn thông tin hỗ trợ tăng cường cảm xúc và sức khỏe tinh thần</h1>
           
-            <p class="small-text">Last updated&nbsp;4 tháng 11, 2020 lúc 13:10</p>
+            <p class="small-text">Last updated&nbsp;13 tháng 11, 2020 lúc 11:36</p>
           
         </div>
       </div>
@@ -268,7 +268,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li></strong>Đường dây trợ giúp</a> <a href="https://www.nvfc.org/fireems-helpline/">Fire/EMS<strong>: Gọi <a href="tel:888-731-FIRE">888-731-FIRE</a> để được trợ giúp 24/7 về nhiều vấn đề sức khỏe hành vi.</li><li><a href="https://www.copline.org/">Đường dây COPLINE</a>: Gọi <a href="tel:800-267-5463">800-267-5463</a>  để tìm sự hỗ trợ 24/7 từ những nhân viên thực thi pháp luật.</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">Đường dây trợ giúp<strong> </strong>Cứu hỏa/EMS</a>: Hãy gọi <a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a> để tìm kiếm dịch vụ hỗ trợ 24/7 về nhiều vấn đề sức khỏe hành vi dành cho lính cứu hỏa.</li><li><a href="https://www.copline.org/">Đường dây COPLINE</a>: Gọi <a href="tel:800-267-5463">800-267-5463</a>  để tìm sự hỗ trợ 24/7 từ những viên chức thực thi pháp luật.</li></ul>
 
       </div>
     </div>
@@ -373,7 +373,7 @@
 
 
 
-<p><!-- /wp:group --><br /><!-- wp:heading --></p>
+<p><!-- /wp:group --><br><!-- wp:heading --></p>
 <h2><!-- /wp:heading -->Tìm các dịch vụ sức khỏe hành vi và tâm thần<!-- wp:paragraph --></h2>
 <p>Nếu quý vị có <strong>Medi-Cal</strong> và cần các dịch vụ sức khỏe tâm thần, hãy gọi đến số điện thoại được in trên thẻ thành viên chương trình bảo hiểm sức khỏe của quý vị, hay gọi đến <a href="https://www.dhcs.ca.gov/individuals/Pages/MHPContactList.aspx">đường dây sức khỏa tâm thần quận ở địa phương</a>. Để được trợ giúp tìm các dịch vụ được đài thọ, hãy gọi đến <a href="https://www.dhcs.ca.gov/services/MH/Pages/mh-ombudsman.aspx">Văn Phòng Thanh Tra của Chương Trình Chăm Sóc Có Quản Lý và Sức Khỏe Tâm Thần Medi-Cal</a> theo số<a href="tel:1-888-452-8609"> 888-452-8609</a>, từ Thứ Hai đến Thứ Sáu, 8 giờ sáng – 5 giờ chiều.<!-- /wp:paragraph --><!-- wp:paragraph --></p>
 <p>Nếu quý vị có một chương trình bảo hiểm sức khỏe thông qua <strong>chủ hãng hay mua</strong> bảo hiểm riêng, và cần các dịch vụ sức khỏe tâm thần, hãy gọi đến số điện thoại được in trên thẻ thành viên chương trình bảo hiểm sức khoẻ của quý vị.</p>
@@ -409,7 +409,7 @@
 <h2>Giúp đỡ người khác</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Bảo vệ trẻ em khỏi tình trạng lạm dụng và bỏ bê</h4>
+<h3>Bảo vệ trẻ em khỏi tình trạng lạm dụng và bỏ bê</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Thành viên cộng đồng đóng vai trò quan trọng trong việc bảo vệ trẻ em khỏi tình trạng lạm dụng và bỏ bê. Nếu quý vị lo lắng về sức khỏe hay sự an toàn của một đứa trẻ, hãy gọi đến <a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse"> đường dây nóng Dịch Vụ Bảo Vệ Trẻ Em (CPS) địa phương</a> của quận nơi đứa trẻ đó sống hay tìm một <a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf">nhà cung cấp dịch vụ nạn nhân thanh thiếu trẻ em bị lạm dụng tại địa phương</a>.</p>
@@ -421,7 +421,7 @@
 <p>Quý vị cũng có thể giúp đỡ trẻ em và thanh thiếu niên bị lạm dụng hoặc bỏ mặc bằng cách tự nguyện phục vụ như một người chăm sóc nuôi tạm.  Vui lòng liên lạc với <a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">sở Dịch Vụ Xã Hội hoặc Dịch Vụ Nhân Sinh</a> của quận địa phương của quý vị hoặc gọi đến đường dây miễn phí theo số <a href="tel: 1-800-543-7487">800-KIDS-4-US</a>.</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Hỗ trợ từ gia đình</h4>
+<h3>Hỗ trợ từ gia đình</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Nếu quý vị quan ngại về một gia đình cần thực phẩm hay hỗ trợ hoặc chính quý vị cần các nguồn hỗ trợ, hãy gọi <a href="tel:211">211</a>, liên lạc với <a href="https://frcnca.org/get-connected/">Trung Tâm Hỗ Trợ Gia Đình</a> phi lợi nhuận tại địa phương của quý vị hoặc nộp đơn xin phúc lợi công cộng mà có thể bao gồm dịch vụ chăm sóc sức khỏe, trợ cấp tiền mặt và hỗ trợ thực phẩm và dinh dưỡng, thông qua <a href="http://www.benefitscal.org/">Sở Dịch Vụ Xã Hội hay Sở Y Tế và Dịch Vụ Nhân Sinh</a> tại quận của quý vị.</p>
@@ -434,7 +434,7 @@
 <p><span style="font-weight: 400;">Người chăm sóc có thể tìm thấy </span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">các nguồn hỗ trợ tại trang mạng của Ban Đặc Trách Người Cao Niên</span></a><span style="font-weight: 400;">, bao gồm những hướng dẫn để bảo vệ sức khỏe và sự an toàn cho quý vị cũng như người thân của quý vị trước COVID-19. </span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>Dịch Vụ Bảo Vệ Người Lớn của Quận</strong></h4>
+<h3><strong>Dịch Vụ Bảo Vệ Người Lớn của Quận</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Dịch Vụ Bảo Vệ Người Lớn: Gọi <a href="tel:833-401-0832">833-401-0832</a> 24/7 khi có những quan ngại về tình trạng lạm dụng, bỏ mặc hay bóc lột người lớn.</p>
