--- a/zh-hans/resources-for-emotional-support-and-well-being/index.html
+++ b/zh-hans/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>情感支持及健康资源</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月4日, 下午1:10</p>
+            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午11:36</p>
           
         </div>
       </div>
@@ -268,7 +268,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.nvfc.org/fireems-helpline/">消防/急救 (Emergency Medical Service, EMS) <strong> </strong>服务热线</a>：致电 <a href="tel:888-731-FIRE">888-731-FIRE</a> ，以就各种行为健康问题获得全天候援助。</li><li><a href="https://www.copline.org/">COPLINE热线</a>：请致电 <a href="tel:800-267-5463">800-267-5463</a> ，为执法人员寻求全天候支持。</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">消防/急救 (Emergency Medical Service, EMS) <strong> </strong>服务热线</a>：致电 <a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a> ，以就各种消防员行为健康问题寻求全天候支持。</li><li><a href="https://www.copline.org/">COPLINE热线</a>：请致电 <a href="tel:800-267-5463">800-267-5463</a> ，为执法人员寻求全天候支持。</li></ul>
 
       </div>
     </div>
@@ -373,7 +373,7 @@
 
 
 
-<p><!-- /wp:group --><br /><!-- wp:heading --></p>
+<p><!-- /wp:group --><br><!-- wp:heading --></p>
 <h2><!-- /wp:heading -->查询行为和心理健康服务<!-- wp:paragraph --></h2>
 <p>若您已加入<strong>Medi-Cal</strong>且需要精神健康服务，请拨打您的健康计划会员卡上的电话号码，或拨打<a href="https://www.dhcs.ca.gov/individuals/Pages/MHPContactList.aspx">县精神健康专线</a>。若想要查询此计划所承保的服务项目，请于周一至周五上午8点至下午5点致电<a href="tel:1-888-452-8609">888-452-8609</a>，联系<a href="https://www.dhcs.ca.gov/services/MH/Pages/mh-ombudsman.aspx">Medi-Cal管理式照护与精神健康申诉专员办公室</a>。<!-- /wp:paragraph --><!-- wp:paragraph --></p>
 <p>若您通过您的<strong>雇主或您自己购买</strong>医疗保险而加入了健康计划，且需要精神健康服务，请拨打您的健康计划会员卡上的电话号码。</p>
@@ -409,7 +409,7 @@
 <h2>帮助他人</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>保护受到虐待和忽视的儿童</h4>
+<h3>保护受到虐待和忽视的儿童</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>社区成员在保护儿童免受虐待和忽视方面发挥着重要作用。若您担心孩子的健康或安全，请致电孩子所在县的<a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse">当地儿童保护服务 (Child Protective Services, CPS) 热线</a>，或找到<a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf">当地虐待儿童青少年受害者服务提供者</a>。</p>
@@ -421,7 +421,7 @@
 <p>您也可以加快成为其寄养看护人的步伐，以帮助遭受虐待或被忽视的儿童和青少年。 请与您所在县的<a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">社会服务或公共服务部门</a>联系，或拨打免费专线<a href="tel: 1-800-543-7487">800-KIDS-4-US</a>。</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>家庭支持</h4>
+<h3>家庭支持</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>若您担心有家庭需要食物或援助，或者您自己需要资源，请致电<a href="tel:211">211</a>，联系您当地的非营利性<a href="https://frcnca.org/get-connected/">家庭资源中心</a>，或申请公共福利，这包括通过您所在县的<a href="http://www.benefitscal.org/">社会服务或卫生及公共服务部门</a>提供的医疗护理、现金援助以及食品和营养品援助。</p>
@@ -434,7 +434,7 @@
 <p><span style="font-weight: 400;">照顾者可以在</span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">老龄化服务部网站</span></a><span style="font-weight: 400;">上找到资源，包括保护您和您亲人的健康和安全免受COVID-19侵害的指引。</span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>县成人保护服务</strong></h4>
+<h3><strong>县成人保护服务</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>成人保护服务：请就成人虐待、忽视或剥削问题，致电全天候热线<a href="tel:833-401-0832">833-401-0832</a>。</p>
