--- a/zh-hant/resources-for-emotional-support-and-well-being/index.html
+++ b/zh-hant/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>情感支援及健康資源</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月4日, 下午1:10</p>
+            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午11:36</p>
           
         </div>
       </div>
@@ -268,7 +268,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.nvfc.org/fireems-helpline/">消防/急救 (Emergency Medical Service, EMS) <strong></strong>服務熱線</a>：致電<a href="tel:888-731-FIRE">888-731-FIRE</a>，以就各種行為健康問題獲得全天候援助。</li><li><a href="https://www.copline.org/">COPLINE熱線</a>：請致電<a href="tel:800-267-5463">800-267-5463</a>，以便執法人員尋求全天候支援。</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">消防/急救 (Emergency Medical Service, EMS) <strong></strong>服務熱線</a>：致電<a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a>，以就各種消防員行為健康問題尋求全天候支援。</li><li><a href="https://www.copline.org/">COPLINE熱線</a>：請致電<a href="tel:800-267-5463">800-267-5463</a>，以便執法人員尋求全天候支援。</li></ul>
 
       </div>
     </div>
@@ -373,7 +373,7 @@
 
 
 
-<p><!-- /wp:group --><br /><!-- wp:heading --></p>
+<p><!-- /wp:group --><br><!-- wp:heading --></p>
 <h2><!-- /wp:heading -->查詢行為和心理健康服務<!-- wp:paragraph --></h2>
 <p>若您已加入<strong>Medi-Cal</strong>且需要精神健康服務，請撥打您的健康計劃會員卡上的音訊電話號碼，或撥打<a href="https://www.dhcs.ca.gov/individuals/Pages/MHPContactList.aspx">縣精神健康專線</a>。若想要查詢此計劃所承保的服務專案，請於週一至週五，上午8點至下午5點致電<a href="tel:1-888-452-8609">888-452-8609</a>，聯絡<a href="https://www.dhcs.ca.gov/services/MH/Pages/mh-ombudsman.aspx">Medi-Cal管理式照護與精神健康申訴專員辦公室</a>。<!-- /wp:paragraph --><!-- wp:paragraph --></p>
 <p>若您透過您的<strong>雇主或您自己購買</strong>醫療保險而加入了健康計劃，且需要精神健康服務，請撥打您的健康計劃會員卡上的電話號碼。</p>
@@ -409,7 +409,7 @@
 <h2>幫助他人</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>保護兒童免受虐待和忽視</h4>
+<h3>保護兒童免受虐待和忽視</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>社區成員在保護兒童免受虐待和忽視方面發揮著重要作用。若您擔心孩子的健康或安全，請致電孩子所在縣的<a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse">當地兒童保護服務 (Child Protective Services, CPS) 熱線</a>，或找到<a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf">當地虐待兒童青少年受害者服務提供者</a>。</p>
@@ -421,7 +421,7 @@
 <p>您也可以加快成為其寄養看護人的步伐，以幫助遭受虐待或被忽視的兒童和青少年。  請與您所在縣的<a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">社會服務或公共服務部門</a>聯絡，或撥打免費電話熱線<a href="tel: 1-800-543-7487">800-KIDS-4-US</a>。</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>家庭支援</h4>
+<h3>家庭支援</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>若您擔心需要食物或援助的家庭，或者您自己需要資源，請致電<a href="tel:211">211</a>，聯絡您當地的非營利組織<a href="https://frcnca.org/get-connected/">家庭資源中心</a>，或申請公共福利，這包括透過您所在縣的<a href="http://www.benefitscal.org/">社會服務或衛生及公共服務部門</a>提供的醫療護理、現金援助以及食品和營養品援助。</p>
@@ -434,7 +434,7 @@
 <p><span style="font-weight: 400;">照顧者可以在</span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">老齡化服務部網站</span></a><span style="font-weight: 400;">上找到資源，包括保護您和您親人的健康和安全免受COVID-19侵害的指引。</span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>縣成人保護服務</strong></h4>
+<h3><strong>縣成人保護服務</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>成人保護服務：請就成人虐待、忽視或剝削問題，致電全天候熱線<a href="tel:833-401-0832">833-401-0832</a>。</p>
